Fixed overflow-y problem

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,6 @@ main {
 
 .chat_list {
   overflow-y: auto;
-  height: 75%; /* to fix */
 }
 
 .chat_list .chat {
